[gd_scene load_steps=10 format=3 uid="uid://cu71y3gmg2l6e"]

[ext_resource type="Texture2D" uid="uid://pqgprggd4b6q" path="res://assets/GUI/GUI_4x.png" id="1_nl766"]
[ext_resource type="Script" path="res://interface/hotbar/items/ManaPotion.gd" id="2_e4t8v"]
[ext_resource type="Texture2D" uid="uid://1ac1w54eu4m4" path="res://assets/assets/PotionsPack1.png" id="2_kion6"]
[ext_resource type="FontFile" uid="uid://cccv1lbg55ags" path="res://assets/DungeonFont.ttf" id="3_ou5g1"]

[sub_resource type="InputEventKey" id="InputEventKey_u7kft"]

[sub_resource type="Shortcut" id="Shortcut_s6axg"]
events = [SubResource("InputEventKey_u7kft")]

[sub_resource type="AtlasTexture" id="AtlasTexture_523hj"]
atlas = ExtResource("1_nl766")
region = Rect2(388, 196, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_prclg"]
atlas = ExtResource("2_kion6")
region = Rect2(43, 328, 10, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_8px1v"]
atlas = ExtResource("1_nl766")
region = Rect2(388, 196, 56, 56)

[node name="ManaPotion" type="TextureButton"]
texture_filter = 1
focus_mode = 0
shortcut = SubResource("Shortcut_s6axg")
texture_normal = SubResource("AtlasTexture_523hj")
script = ExtResource("2_e4t8v")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 17.9741
offset_top = 10.9768
offset_right = 37.9741
offset_bottom = 43.9768
texture = SubResource("AtlasTexture_prclg")
stretch_mode = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
modulate = Color(1, 1, 1, 0.996078)
texture_filter = 1
layout_mode = 0
offset_right = 56.0
offset_bottom = 56.0
step = 0.05
fill_mode = 5
nine_patch_stretch = true
texture_progress = SubResource("AtlasTexture_8px1v")
tint_progress = Color(0.243137, 0.235294, 0.219608, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Time" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 3.1719
offset_top = 1.21964
offset_right = 40.1719
offset_bottom = 20.2196
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ou5g1")
theme_override_font_sizes/font_size = 10

[node name="Key" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -18.0
offset_right = 44.0
offset_bottom = 5.0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ou5g1")
text = "Q"

[node name="Amount" type="Label" parent="."]
layout_mode = 0
offset_left = 42.292
offset_top = 36.5892
offset_right = 82.292
offset_bottom = 59.5892
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ou5g1")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
